[tool.poetry]
name = "python-pype"
version = "0.0.77"
description = "Command-line pipes in Python"
authors = ["author <author@example.com>"]
readme = "README.rst"
packages = [
         {include = "pype", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"

click = "*"
toolz = "*"
attrs = "*"
click-default-group = "*"
parso = "*"
bump2version = "*"
trio = "*"
async_generator = "*"
async_exit_stack = "*"
appdirs = "*"
toml = "*"

[tool.poetry.dev-dependencies]

bump2version = "*"
coverage = "*"
hypothesis = "*"
pylint = "*"
pytest = "*"
requests = "*"
aiohttp = "*"
jedi = "*"
"autopep8" = "*"
yapf = "*"
parso = "*"
twine = "*"
vulture = "*"
treq = "*"
poetry = "*"
twisted = "*"
asks = "*"
cuvner = "*"
pytest-cov = "^2.6"
tox = "*"
pytest-clarity = {version = "^0.1.0-alpha.1",allows-prereleases = true}

[tool.poetry.scripts]

pype = 'pype:cli.cli'


[tool.poetry.plugins.pype_plugins]
"basic" = "pype.plugins"
