

[tool.towncrier]

   package = "mario"
   package_dir = "src"
   filename = "CHANGELOG.rst"
   template = "changelog.d/towncrier_template.rst"
   issue_format = "`#{issue} <https://github.com/python-mario/mario/issues/{issue}>`_"
   directory = "changelog.d"
   title_format = "{version} ({project_date})"
   underlines = ["-", "^"]

   [[tool.towncrier.section]]
       path = ""

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backward-incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "change"
        name = "Changes"
        showcontent = true


[tool.black]

include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.?venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.poetry]
name = "mario"
version = "0.0.154" # MARIO_VERSION  (This comment helps bumpversion find the right line.)
description = ""
authors = ["akb <uBX6aXPqDSRrt92kha28@cordaz.com>"]
readme = "README.rst"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "7.0"
toolz = "0.9.0"
attrs = "19.1.0"
parso = "0.5.1"
bump2version = "0.5.11"
trio = "0.11.0"
async_generator = "1.10"
async_exit_stack = "1.0.1"
appdirs = "1.4.3"
toml = "0.10.0"
asks = "2.3.3"
marshmallow = "3.0rc8"
trio_typing = "0.2.0"
docutils = "0.14"
pytest = "5.1.2"
importlib_metadata = "0.18"
xmltodict = "0.12.0"
pyyaml = "5.1.1"
pyrsistent = "0.14.11"
sphinx = {version = "2.1.2", optional = true}
sphinx-rtd-theme = {version = "^0.4.3", optional = true}
sphinx-autodoc-typehints = {version = "^1.7", optional = true}
sphinx-click = {version = "^2.2", optional = true}
marshmallow-jsonschema = {version = "^0.7.0", optional = true}
sphinx-jsonschema = {version = "^1.9", optional = true}


[tool.poetry.dev-dependencies]
bump2version = "^0.5.11"
coverage = "^4.5"
pytest = "^5.0"
hypothesis = "^4.32"
requests = "^2.22"
yapf = "^0.28.0"
pylint = "^2.3"
aiohttp = "^3.5"
twine = "^1.13"
vulture = "^1.0"
treq = "^18.6"
twisted = "^19.7"
cuvner = "^18.0"
pytest-cov = "^2.7"
tox = "^3.13"
lockfile = "^0.12.2"
sphinx_rtd_theme = "^0.4.3"
pytest-sugar = "^0.9.2"
lxml = "^4.4"
docshtest = "^0.0.2"
marshmallow-jsonschema = "^0.7.0"
pre-commit = "^1.18"
black = {version = "^19.3b0", allows-prereleases = true}
pytest-clarity = {version = "^0.1.0-alpha.1", allows-prereleases = true}
pygments = {version = "^2.4", allows-prereleases = true}

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "marshmallow-jsonschema",
    "sphinx-jsonschema",

]

[tool.poetry.plugins.mario_plugins]
basic = "mario.plugins"

[tool.poetry.scripts]
mario = "mario.cli:cli"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
